...
                    android:layout_weight="0.5"
                    android:text="Est. Cost (CAD)"
                    android:textColor="@color/subTitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/view_item_cost"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="0.5"
                    android:text="Cost"
                    android:hint="—"
                    android:textSize="15sp" />
...
                    android:layout_weight="0.5"
                    android:text="Make"
                    android:textColor="@color/subTitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/view_item_make"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="0.5"
                    android:text="Make"
                    android:hint="—"
                    android:textSize="15sp" />
...
                    android:layout_weight="0.5"
                    android:text="Model"
                    android:textColor="@color/subTitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/view_item_model"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="0.5"
                    android:text="Model"
                    android:hint="—"
                    android:textSize="15sp" />
...
                    android:layout_weight="0.5"
                    android:text="Serial Number"
                    android:textColor="@color/subTitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/view_item_serial_number"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="0.5"
                    android:text="Serial"
                    android:hint="—"
                    android:textSize="15sp" />
...
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp">

                    <TextView
                        android:id="@+id/view_item_comment"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="0.5"
                        android:text="Comment"
                        android:textSize="15sp" />
                </LinearLayout>
...
                </androidx.appcompat.widget.AppCompatButton>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/delete_button"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/delete_button_border"
                    android:text="Delete Item"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="24dp"
...
