...
                    android:text="No. of Items"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/total_count_text"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="23"
                    android:textSize="22sp"
                    android:textColor="@color/black"
...
            android:id="@+id/select_toolbar"
            layout="@layout/select_toolbar"
            android:visibility="gone" />
    </FrameLayout>

    <ListView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:paddingHorizontal="4dp"
        android:paddingTop="4dp" />
</LinearLayout>
